[gd_scene load_steps=12 format=3 uid="uid://dkgo7ix5qc5ry"]

[ext_resource type="Script" path="res://scripts/DIED_SCREEN.gd" id="1_66ody"]
[ext_resource type="Texture2D" uid="uid://ca8wl5ynuqa4s" path="res://pixil-frame-0 (16).png" id="2_l3lod"]
[ext_resource type="FontFile" uid="uid://v7wbamqcqhhp" path="res://minecraft-ten-font-cyrillic.ttf" id="3_dwa21"]

[sub_resource type="Animation" id="Animation_jghj8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pixil-frame-0(16):modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label3:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Button:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1af5d"]
resource_name = "died"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pixil-frame-0(16):modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.6, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label3:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Button:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.6, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2qk21"]
_data = {
"RESET": SubResource("Animation_jghj8"),
"died": SubResource("Animation_1af5d")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eys20"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mq544"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6vcvv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kppe3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xfc65"]

[node name="DIED_SCREEN" type="Node2D"]
visible = false
position = Vector2(965, 540)
scale = Vector2(1.24, 1.24)
script = ExtResource("1_66ody")

[node name="Pixil-frame-0(16)" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(0.662745, 0.662745, 0.662745, 1)
scale = Vector2(2.25052, -2.54603)
texture = ExtResource("2_l3lod")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2qk21")
}

[node name="Label" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -234.0
offset_right = 105.0
offset_bottom = -106.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.380392, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_dwa21")
theme_override_font_sizes/font_size = 73
text = "DIED"

[node name="Label2" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -507.259
offset_top = -150.806
offset_right = -467.259
offset_bottom = -122.806
theme_override_fonts/font = ExtResource("3_dwa21")
theme_override_font_sizes/font_size = 16

[node name="Label3" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -507.0
offset_top = -82.0
offset_right = -467.0
offset_bottom = -54.0
theme_override_fonts/font = ExtResource("3_dwa21")
theme_override_font_sizes/font_size = 16

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.8065
offset_top = 30.6452
offset_right = 79.1935
offset_bottom = 83.6452
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_dwa21")
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxTexture_eys20")
theme_override_styles/hover = SubResource("StyleBoxTexture_mq544")
theme_override_styles/pressed = SubResource("StyleBoxTexture_6vcvv")
theme_override_styles/disabled = SubResource("StyleBoxTexture_kppe3")
theme_override_styles/focus = SubResource("StyleBoxTexture_xfc65")
text = "RESTaRT"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
